fixed alignment issue on eduex page

--- a/public/style.css
+++ b/public/style.css
@@ -76,7 +76,7 @@ body > div {
   flex-direction: column;
   align-items: center;
   padding: 10px;
-  width: 60%;
+  width: 50%;
   margin: 10px;
   flex-wrap: wrap;
   border-style: solid;
@@ -109,6 +109,7 @@ body > div {
 
 .responsibilities {
   font-size: 13.28px;
+  align-self: flex-start;
 }
 
 /*PROJECTS */
